[gd_scene load_steps=15 format=3 uid="uid://negulmyvlfia"]

[ext_resource type="Script" path="res://scripts/underwater.gd" id="1_64qq8"]
[ext_resource type="Texture2D" uid="uid://bf1u426oa67tj" path="res://assets/Tiles.png" id="1_f6uo0"]
[ext_resource type="PackedScene" uid="uid://bm3iswgwycmhc" path="res://scenes/player.tscn" id="2_5f45n"]
[ext_resource type="PackedScene" uid="uid://beownjqvdx0bb" path="res://scenes/food.tscn" id="3_plkq6"]

[sub_resource type="Animation" id="Animation_41chw"]
resource_name = "falling"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(81, 36), Vector2(79, 139)]
}

[sub_resource type="Animation" id="Animation_ofals"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(81, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xogo6"]
_data = {
"RESET": SubResource("Animation_ofals"),
"falling": SubResource("Animation_41chw")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_usowj"]
texture = ExtResource("1_f6uo0")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
6:18/size_in_atlas = Vector2i(1, 3)
6:18/0 = 0
7:18/size_in_atlas = Vector2i(1, 3)
7:18/0 = 0
8:18/size_in_atlas = Vector2i(1, 3)
8:18/0 = 0
9:18/size_in_atlas = Vector2i(1, 3)
9:18/0 = 0
0:21/size_in_atlas = Vector2i(5, 2)
0:21/0 = 0
5:21/size_in_atlas = Vector2i(5, 2)
5:21/0 = 0
10:21/size_in_atlas = Vector2i(5, 2)
10:21/0 = 0

[sub_resource type="TileSet" id="TileSet_yyd75"]
sources/0 = SubResource("TileSetAtlasSource_usowj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8eqq"]
size = Vector2(654, 25)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vcsex"]
b = Vector2(0, 232)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_pcgyw"]
b = Vector2(656, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kaf5d"]
a = Vector2(0, 232)
b = Vector2(657, 232)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wa642"]
a = Vector2(656, 0)
b = Vector2(657, 232)

[node name="underwater" type="Node2D"]
script = ExtResource("1_64qq8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xogo6")
}
autoplay = "falling"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_yyd75")
format = 2
layer_0/tile_data = PackedInt32Array(131072, 393216, 18, 131073, 458752, 18, 131074, 524288, 18, 131075, 589824, 18, 131077, 458752, 18, 131078, 524288, 18, 131079, 589824, 18, 131080, 393216, 18, 131076, 393216, 18, 131081, 458752, 18, 131082, 393216, 18, 131083, 458752, 18, 131084, 393216, 18, 131085, 458752, 18, 131087, 589824, 18, 131088, 458752, 18, 131089, 524288, 18, 131090, 393216, 18, 131086, 524288, 18, 131091, 458752, 18, 131092, 393216, 18, 131093, 458752, 18, 131094, 524288, 18, 131095, 393216, 18, 131096, 393216, 18, 131097, 458752, 18, 131098, 524288, 18, 131099, 393216, 18, 131100, 393216, 18, 131101, 458752, 18, 131102, 524288, 18, 131103, 589824, 18, 131104, 458752, 18, 131105, 393216, 18, 131106, 458752, 18, 131107, 393216, 18, 131108, 458752, 18, 131109, 393216, 18, 131110, 458752, 18, 131111, 524288, 18, 131112, 589824, 18, 262144, 65536, 19, 262145, 65536, 19, 262146, 65536, 19, 262147, 65536, 19, 262148, 65536, 19, 262149, 65536, 19, 262150, 65536, 19, 262151, 65536, 19, 262152, 65536, 19, 262153, 65536, 19, 262154, 65536, 19, 262155, 65536, 19, 262156, 65536, 19, 262157, 65536, 19, 262158, 65536, 19, 262159, 65536, 19, 262160, 65536, 19, 262161, 65536, 19, 262162, 65536, 19, 262163, 65536, 19, 262164, 65536, 19, 262165, 65536, 19, 262166, 65536, 19, 262167, 65536, 19, 262168, 65536, 19, 262169, 65536, 19, 262170, 65536, 19, 262171, 65536, 19, 262172, 65536, 19, 262173, 65536, 19, 262174, 65536, 19, 262175, 65536, 19, 262176, 65536, 19, 262177, 65536, 19, 262178, 65536, 19, 262179, 65536, 19, 262180, 65536, 19, 262181, 65536, 19, 262182, 65536, 19, 262183, 65536, 19, 262184, 65536, 19, 327720, 65536, 19, 393256, 65536, 19, 458792, 65536, 19, 524328, 65536, 19, 589864, 65536, 19, 655400, 65536, 19, 720936, 65536, 19, 786472, 65536, 19, 852008, 0, 21, 852007, 65536, 19, 852006, 0, 21, 852005, 65536, 19, 852004, 0, 21, 852003, 0, 21, 852002, 65536, 19, 852001, 65536, 19, 786465, 65536, 19, 786464, 65536, 19, 786463, 65536, 19, 786462, 65536, 19, 786461, 65536, 19, 786460, 65536, 19, 786459, 65536, 19, 786458, 65536, 19, 851994, 65536, 19, 851993, 0, 21, 851992, 0, 21, 851991, 65536, 19, 851990, 0, 21, 851989, 0, 21, 851988, 65536, 19, 851995, 0, 21, 851996, 0, 21, 851997, 0, 21, 851998, 65536, 19, 851999, 0, 21, 852000, 65536, 19, 851987, 0, 21, 851986, 65536, 19, 851985, 65536, 19, 851984, 65536, 19, 851983, 0, 21, 851982, 65536, 19, 851981, 0, 21, 851980, 65536, 19, 851979, 0, 21, 851978, 65536, 19, 851977, 0, 21, 851976, 65536, 19, 851974, 0, 21, 851973, 65536, 19, 851972, 0, 21, 851971, 0, 21, 851970, 0, 21, 851969, 65536, 19, 851968, 65536, 19, 786432, 65536, 19, 720896, 65536, 19, 655360, 65536, 19, 655361, 65536, 19, 589825, 65536, 19, 524289, 65536, 19, 458753, 65536, 19, 393217, 65536, 19, 327681, 65536, 19, 327680, 65536, 19, 393216, 65536, 19, 458752, 65536, 19, 524288, 65536, 19, 589824, 65536, 19, 720897, 65536, 19, 786433, 65536, 19, 786434, 65536, 19, 720898, 65536, 19, 655362, 65536, 19, 589826, 65536, 19, 524290, 65536, 19, 458754, 65536, 19, 393218, 65536, 19, 327682, 65536, 19, 327683, 65536, 19, 393219, 65536, 19, 458755, 65536, 19, 524291, 65536, 19, 589827, 65536, 19, 655363, 65536, 19, 720899, 65536, 19, 786435, 65536, 19, 786436, 65536, 19, 720900, 65536, 19, 720901, 65536, 19, 655365, 65536, 19, 589829, 65536, 19, 524293, 65536, 19, 458757, 65536, 19, 393221, 65536, 19, 393220, 65536, 19, 327684, 65536, 19, 458756, 65536, 19, 524292, 65536, 19, 589828, 65536, 19, 655364, 65536, 19, 786437, 65536, 19, 786438, 65536, 19, 720902, 65536, 19, 655366, 65536, 19, 589830, 65536, 19, 524294, 65536, 19, 458758, 65536, 19, 393222, 65536, 19, 327686, 65536, 19, 327685, 65536, 19, 720903, 65536, 19, 786439, 65536, 19, 786440, 65536, 19, 720904, 65536, 19, 655368, 65536, 19, 589832, 65536, 19, 524296, 65536, 19, 458760, 65536, 19, 393223, 65536, 19, 327687, 65536, 19, 458759, 65536, 19, 524295, 65536, 19, 589831, 65536, 19, 655367, 65536, 19, 393224, 65536, 19, 327688, 65536, 19, 327689, 65536, 19, 393225, 65536, 19, 458761, 65536, 19, 524297, 65536, 19, 589833, 65536, 19, 655369, 65536, 19, 720905, 65536, 19, 786441, 65536, 19, 786442, 65536, 19, 720906, 65536, 19, 655370, 65536, 19, 589834, 65536, 19, 524298, 65536, 19, 524299, 65536, 19, 458763, 65536, 19, 393227, 65536, 19, 327690, 65536, 19, 196618, 65536, 19, 393226, 65536, 19, 458762, 65536, 19, 786443, 65536, 19, 786444, 65536, 19, 720908, 65536, 19, 655372, 65536, 19, 589836, 65536, 19, 524300, 65536, 19, 458764, 65536, 19, 393228, 65536, 19, 327692, 65536, 19, 327691, 65536, 19, 589835, 65536, 19, 655371, 65536, 19, 720907, 65536, 19, 327693, 65536, 19, 393229, 65536, 19, 458765, 65536, 19, 524301, 65536, 19, 589837, 65536, 19, 655373, 65536, 19, 720909, 65536, 19, 786445, 65536, 19, 786446, 65536, 19, 720910, 65536, 19, 655374, 65536, 19, 655375, 65536, 19, 589839, 65536, 19, 524303, 65536, 19, 458766, 65536, 19, 393230, 65536, 19, 327694, 65536, 19, 327695, 65536, 19, 393231, 65536, 19, 458767, 65536, 19, 524302, 65536, 19, 589838, 65536, 19, 720911, 65536, 19, 786447, 65536, 19, 786448, 65536, 19, 720912, 65536, 19, 655376, 65536, 19, 589840, 65536, 19, 524304, 65536, 19, 458768, 65536, 19, 393232, 65536, 19, 327696, 65536, 19, 720913, 65536, 19, 786449, 65536, 19, 786450, 65536, 19, 720914, 65536, 19, 655378, 65536, 19, 589842, 65536, 19, 524306, 65536, 19, 458769, 65536, 19, 393233, 65536, 19, 327697, 65536, 19, 327698, 65536, 19, 393234, 65536, 19, 458770, 65536, 19, 524305, 65536, 19, 589841, 65536, 19, 655377, 65536, 19, 589843, 65536, 19, 524307, 65536, 19, 458771, 65536, 19, 393235, 65536, 19, 393236, 65536, 19, 327700, 65536, 19, 327699, 65536, 19, 327701, 65536, 19, 327702, 65536, 19, 327703, 65536, 19, 327704, 65536, 19, 327705, 65536, 19, 327706, 65536, 19, 327707, 65536, 19, 327708, 65536, 19, 327709, 65536, 19, 327710, 65536, 19, 327711, 65536, 19, 327712, 65536, 19, 327713, 65536, 19, 327714, 65536, 19, 327715, 65536, 19, 327717, 65536, 19, 327718, 65536, 19, 327719, 65536, 19, 393255, 65536, 19, 393254, 65536, 19, 327716, 65536, 19, 393250, 65536, 19, 393251, 65536, 19, 393252, 65536, 19, 393253, 65536, 19, 393249, 65536, 19, 393248, 65536, 19, 393247, 65536, 19, 393246, 65536, 19, 393245, 65536, 19, 393244, 65536, 19, 393243, 65536, 19, 393242, 65536, 19, 393241, 65536, 19, 393240, 65536, 19, 393239, 65536, 19, 393238, 65536, 19, 458774, 65536, 19, 458773, 65536, 19, 458772, 65536, 19, 458775, 65536, 19, 458776, 65536, 19, 458777, 65536, 19, 458778, 65536, 19, 458779, 65536, 19, 393237, 65536, 19, 458780, 65536, 19, 458781, 65536, 19, 458782, 65536, 19, 458783, 65536, 19, 458784, 65536, 19, 458785, 65536, 19, 458786, 65536, 19, 458787, 65536, 19, 458788, 65536, 19, 458789, 65536, 19, 458790, 65536, 19, 458791, 65536, 19, 524327, 65536, 19, 524326, 65536, 19, 524325, 65536, 19, 524324, 65536, 19, 524323, 65536, 19, 524322, 65536, 19, 524321, 65536, 19, 524320, 65536, 19, 524319, 65536, 19, 524318, 65536, 19, 524317, 65536, 19, 524316, 65536, 19, 524315, 65536, 19, 524314, 65536, 19, 524313, 65536, 19, 524312, 65536, 19, 524311, 65536, 19, 524310, 65536, 19, 524309, 65536, 19, 524308, 65536, 19, 589844, 65536, 19, 589845, 65536, 19, 589846, 65536, 19, 589847, 65536, 19, 589848, 65536, 19, 589849, 65536, 19, 589850, 65536, 19, 589851, 65536, 19, 589852, 65536, 19, 589853, 65536, 19, 589854, 65536, 19, 589855, 65536, 19, 589856, 65536, 19, 589857, 65536, 19, 589858, 65536, 19, 589859, 65536, 19, 589860, 65536, 19, 589861, 65536, 19, 589862, 65536, 19, 589863, 65536, 19, 655399, 65536, 19, 655398, 65536, 19, 655397, 65536, 19, 655396, 65536, 19, 655395, 65536, 19, 655394, 65536, 19, 655393, 65536, 19, 655392, 65536, 19, 655391, 65536, 19, 655390, 65536, 19, 655389, 65536, 19, 655388, 65536, 19, 655387, 65536, 19, 655386, 65536, 19, 655385, 65536, 19, 655384, 65536, 19, 655383, 65536, 19, 720919, 65536, 19, 720918, 65536, 19, 786455, 65536, 19, 786456, 65536, 19, 786457, 65536, 19, 720927, 65536, 19, 720928, 65536, 19, 720929, 65536, 19, 720930, 65536, 19, 720931, 65536, 19, 720932, 65536, 19, 720933, 65536, 19, 720934, 65536, 19, 720935, 65536, 19, 786471, 65536, 19, 786470, 65536, 19, 786469, 65536, 19, 786468, 65536, 19, 786467, 65536, 19, 786466, 65536, 19, 720926, 65536, 19, 720925, 65536, 19, 720924, 65536, 19, 720923, 65536, 19, 720922, 65536, 19, 720921, 65536, 19, 720920, 65536, 19, 720917, 65536, 19, 655381, 65536, 19, 655380, 65536, 19, 655379, 65536, 19, 655382, 65536, 19, 720916, 65536, 19, 720915, 65536, 19, 786451, 65536, 19, 786452, 65536, 19, 786453, 65536, 19, 786454, 65536, 19, 851975, 0, 21)

[node name="player" parent="." instance=ExtResource("2_5f45n")]
z_index = 1
position = Vector2(81, 7)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 656
limit_bottom = 232

[node name="Label" type="Label" parent="player"]
offset_left = -104.0
offset_top = -24.0
offset_right = 103.0
offset_bottom = -11.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 8
text = "0 / 10 food"
horizontal_alignment = 1
vertical_alignment = 1

[node name="foodNotes" type="Node" parent="."]

[node name="food" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(448, 90)

[node name="food2" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(627, 215)

[node name="food3" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(164, 146)

[node name="food4" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(514, 148)

[node name="food5" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(261, 82)

[node name="food6" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(117, 207)

[node name="food7" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(338, 163)

[node name="food8" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(396, 215)

[node name="food9" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(597, 60)

[node name="food10" parent="foodNotes" instance=ExtResource("3_plkq6")]
position = Vector2(248, 216)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="leaveArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leaveArea"]
position = Vector2(328, 13)
shape = SubResource("RectangleShape2D_m8eqq")
debug_color = Color(0.874618, 0.272254, 0.545746, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_vcsex")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_pcgyw")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_kaf5d")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_wa642")

[connection signal="body_entered" from="leaveArea" to="." method="_on_leave_area_body_entered"]
[connection signal="body_exited" from="leaveArea" to="." method="_on_leave_area_body_exited"]
